<resources>
    <string name="app_name" translatable="false">GameScout</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="score">"Score: "</string>
    <string name="price" translatable="false">"€"</string>
    <string name="fabio_recchia" translatable="false">OneFabio</string>
    <string name="lorenzo_podio" translatable="false">Pod</string>
    <string name="lorenzo_parisi" translatable="false">Paris</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login">Login</string>
    <string name="register">Signup</string>
    <string name="job" translatable="false">Android Developer</string>
    <string name="profile_stats">Stats</string>
    <string name="disliked_games">Disliked games</string>
    <string name="seen_games">Total reviewed games</string>
    <string name="profiled_friends">Friends</string>
    <string name="nothing" translatable="false">Nothing</string>
    <string name="recchia" translatable="false">OneFabio</string>
    <string name="setting1">Notifications</string>
    <string name="setting2" translatable="false">Account</string>
    <string name="setting3" translatable="false">Privacy</string>
    <string name="setting4">Help</string>
    <string name="next">Next</string>
    <string name="gameimage" translatable="false">Current game\'s image\n</string>
    <string name="menu_button">Menu button</string>
    <string name="logo_image">Logo image</string>
    <string name="liked_games_number" translatable="false">15</string>
    <string name="disliked_games_number" translatable="false">1.2K</string>
    <string name="viewed_games" translatable="false">1.2k</string>
    <string name="friend_image">friend image</string>
    <string name="game_image">Game image</string>
    <string name="show_more">Show more</string>
    <string name="skipped_games">Skipped Games</string>
    <string name="skip_button" translatable="false">skip\n</string>
    <string name="like_button">like</string>
    <string name="tutorial_image">Image for the tutorial</string>
    <string name="nome_utente">Username</string>
    <string name="email_example_com" translatable="false">email@example.com</string>
    <string name="liked_games">liked games</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
</resources>